--- a/ndatlas.conf
+++ b/ndatlas.conf
@@ -1,4 +1,4 @@
-description "node.js server for ND Atlas (dev)"
+description "node.js server for ND Atlas"
 author      "Michael Marti and Marshall Mattingly"
 
 # auto start and stop
@@ -11,7 +11,7 @@ respawn limit 99 5
 
 script
 	export HOME="/root"
-	exec sudo -u www-data /usr/bin/nodejs /var/www/nd125/server.js >> /var/log/node.log 2>&1
+	exec sudo -u www-data /usr/bin/nodejs /var/www/ndatlas/server.js >> /var/log/node.log 2>&1
 end script
 
 post-start script
